--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,11 +51,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cost of this move is 1\n",
+      "[1, 2]\n",
+      "[] <=[3]-\n",
+      "[4]\n",
+      "[]\n",
+      "Total cost: 1\n",
+      "\n",
+      "The cost of this action sequence is 3\n",
+      "[1, 2]\n",
+      "[3] <=[None]-\n",
+      "[4]\n",
+      "[]\n",
+      "Total cost: 3\n",
+      "\n",
+      "The cost of this action sequence is 7\n",
+      "[1, 2]\n",
+      "[3]\n",
+      "[] <=[4]-\n",
+      "[]\n",
+      "Total cost: 7\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Here we create a function that allows us to compute the next state we end up\n",
+    "# Here I created a function that allows us to compute the next state we end up\n",
     "# with if we apply an action to a state\n",
     "\n",
     "def perform_action(state, action):\n",
@@ -66,7 +94,147 @@
     "        if new_state[1] >= (len(new_state[0]) -1):\n",
     "            return None\n",
     "        new_state[1] = int(new_state[1])+1\n",
-    "        cost = 1"
+    "        cost = 1\n",
+    "\n",
+    "    if action == \"LEFT\":\n",
+    "        if new_state[1] <= 0:\n",
+    "            return None\n",
+    "        new_state[1] = int(new_state[1])-1\n",
+    "        cost = 1\n",
+    "    \n",
+    "    if action == \"DROP\":\n",
+    "        if new_state[2] == None:\n",
+    "            return None\n",
+    "        container = new_state[2]\n",
+    "        new_state[2] = None\n",
+    "        new_state[0][new_state[1]].append(container)\n",
+    "        cost = 2\n",
+    "\n",
+    "    if action == \"PICK\":\n",
+    "        if new_state[2] != None:\n",
+    "            return None\n",
+    "        if len(new_state[0][new_state[1]]) == 0:\n",
+    "            return None\n",
+    "        container = new_state[0][new_state[1]].pop()\n",
+    "        new_state[2] = container\n",
+    "        cost = 3\n",
+    "    return new_state, new_state_cost+cost\n",
+    "\n",
+    "def perform_action_sequence(state, actions):\n",
+    "    new_state = state\n",
+    "    for action in actions:\n",
+    "        new_state = perform_action(new_state, action)\n",
+    "    return new_state\n",
+    "\n",
+    "print(\"The cost of this move is \"+str(perform_action(initial_state, \"RIGHT\")[1]))\n",
+    "print_state(perform_action(initial_state, \"RIGHT\"))\n",
+    "\n",
+    "print(\"The cost of this action sequence is \"+str(perform_action_sequence(initial_state, [\"RIGHT\", \"DROP\"])[1]))\n",
+    "print_state(perform_action_sequence(initial_state, [\"RIGHT\", \"DROP\"]))\n",
+    "\n",
+    "print(\"The cost of this action sequence is \"+str(perform_action_sequence(initial_state, [\"RIGHT\", \"DROP\", \"RIGHT\", \"PICK\"])[1]))\n",
+    "print_state(perform_action_sequence(initial_state,[\"RIGHT\",\"DROP\",\"RIGHT\",\"PICK\"]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting from this initial state\n",
+      "[1, 2] <=[3]-\n",
+      "[]\n",
+      "[4]\n",
+      "[]\n",
+      "Total cost: 0\n",
+      "\n",
+      "I use a random search to ensure each loading bay has at least one container\n",
+      "Plan found:\n",
+      "['RIGHT', 'DROP', 'PICK', 'DROP', 'LEFT', 'PICK', 'DROP', 'PICK', 'RIGHT', 'RIGHT', 'RIGHT', 'DROP']\n",
+      "State after performing the plan:\n",
+      "[1]\n",
+      "[3]\n",
+      "[4]\n",
+      "[2] <=[None]-\n",
+      "Total cost: 22\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "import time\n",
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "all_actions = [\"DROP\",\"PICK\",\"LEFT\",\"RIGHT\"]\n",
+    "\n",
+    "def is_action_valid(state, action):\n",
+    "    if perform_action(state, action):\n",
+    "      return True\n",
+    "    else:\n",
+    "      return False\n",
+    "\n",
+    "# In this case, the goal is to have each loading bay hold at least one container\n",
+    "def is_goal_state(state):\n",
+    "  for bay in state[0]:\n",
+    "    if len(bay) == 0:\n",
+    "      return False\n",
+    "  return True\n",
+    "\n",
+    "# Implements a random tree search. Nodes in the frontier are expanded in\n",
+    "# a random order\n",
+    "def random_search(initial_state, possible_actions = all_actions):\n",
+    "\n",
+    "    frontier = []\n",
+    "\n",
+    "    frontier.append((copy.deepcopy(initial_state),[]))\n",
+    "\n",
+    "    start = time.time()\n",
+    "\n",
+    "    while frontier:\n",
+    "\n",
+    "        state_index = 0\n",
+    "\n",
+    "        # choose a random state in the frontier to expand\n",
+    "        state = random.choice(frontier)\n",
+    "        frontier.remove(state)\n",
+    "\n",
+    "        if is_goal_state(state[0][0]):\n",
+    "            return state\n",
+    "\n",
+    "        for action in possible_actions:\n",
+    "            # if the action is applicable in the given state\n",
+    "            if is_action_valid(state[0],action):\n",
+    "                # apply the action\n",
+    "                new_state = perform_action(state[0],action)\n",
+    "                new_actions = state[1].copy()\n",
+    "                new_actions.append(action)\n",
+    "                # add the new state in the frontier if it is a new state\n",
+    "                frontier.append((new_state, new_actions))\n",
+    "\n",
+    "        # while not always necessary, it is a good idea in practice\n",
+    "        # to limit the execution of a potentially non-terminating\n",
+    "        # algorithm. For example by limiting the time it has available\n",
+    "        # before forcing it to terminate\n",
+    "        end = time.time()\n",
+    "        if end-start > 20:\n",
+    "            raise TimeoutError(\"Execution is taking too long to terminate.\")\n",
+    "\n",
+    "print(\"Starting from this initial state\")\n",
+    "print_state(initial_state)\n",
+    "print(\"I use a random search to ensure each loading bay has at least one container\")\n",
+    "solution = random_search((initial_state))\n",
+    "print(\"Plan found:\")\n",
+    "print(str(solution[1]))\n",
+    "print(\"State after performing the plan:\")\n",
+    "print_state(solution[0])\n",
+    "\n"
    ]
   }
  ],
